♻️ refactor: renewal response, test
